# frankly_fw_update

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build-deb.sh  build.rs
.github/workflows/: build.yaml  build.yaml.old  quality.yml  release.yml  test.yml
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml  build.rs
common/src/francor/: mod.rs
common/src/francor/franklyboot/: mod.rs
common/src/francor/franklyboot/com/: can.rs  mod.rs  msg.rs  serial.rs  sim.rs
common/src/francor/franklyboot/device/: device.rs  entry.rs  mod.rs
common/src/francor/franklyboot/firmware/: hex_file.rs  mod.rs
common/src/francor/franklyboot/flash/: flash_desc.rs  flash_page.rs  mod.rs
common/src/francor/franklyboot/utils/: sim_api.rs
common/tests/data/: TestFirmware.hex  example_app_g431rb.hex
common/tests/utils/can_device_simulator/: CAN_SIMULATOR_README.md  can_device_simulator.py
debian/: changelog  control  copyright  debhelper-build-stamp  rules
src/: lib.rs  main.rs
src/francor/: mod.rs
src/francor/franklyboot/: com.rs  device.rs  mod.rs  msg.rs
src/francor/franklyboot/com/: can.rs  mod.rs  msg.rs  serial.rs  sim.rs
src/francor/franklyboot/device/: device.rs  entry.rs  flash.rs  mod.rs
src/francor/franklyboot/firmware/: flash_page.rs  hex_file.rs  mod.rs
src/francor/franklyboot/flash/: flash_desc.rs
src/francor/franklyboot/tests/: device_sim_api.rs  mod.rs
src/francor/franklyboot/utils/: mod.rs
tests/data/: TestG431RBBlinky.hex
tui/: Cargo.toml
tui/src/: main.rs
