[package]
name = "frankly-fw-update-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"
crc = "3.2"
serialport = "4.7.0"
socketcan = "3.5.0"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

