[package]
name = "frankly-fw-update-common"
version.workspace = true
edition.workspace = true

[lib]
name = "frankly_fw_update_common"
path = "src/lib.rs"

[dependencies]
crc = { workspace = true }
serialport = { workspace = true }
socketcan = { workspace = true }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
