[package]
name = "frankly-fw-update-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "frankly-fw-update-tui"
path = "src/main.rs"

[dependencies]
frankly-fw-update-common = { path = "../common" }
ratatui = { workspace = true }
crossterm = { workspace = true }
serialport = { workspace = true }
